[project]
name = "redis-cache-service-py"
version = "0.1.0"
description = "Async Redis-based caching service with event-driven invalidation and concurrency demo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv]

[project.scripts]
cachecli = "redis_cache_service_py.cli:app"
